# binary_classifier

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt
