[tool.poetry]
name = "binary_classifier"
version = "0.1.0"
description = ""
authors = ["Harry Adel <harryadelb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
pandas = "^1.1.0"
scikit-learn = "^0.23.2"
flask = "^1.1.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
